add tracking resi
